test/error/parsing.scm

;;aaaaaaaaaaaaaaaaaa
(do ((i 0 (+ i 1)))
    (#t 1)
  1)
